--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@ngrx/store": "^16.3.0",
+    "@ngrx/store": "^17.0.0",
+    "@ngrx/store-devtools": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^16.1.5",
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
+    "@ngrx/schematics": "^17.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
